Worked on last section

--- a/index.html
+++ b/index.html
@@ -142,6 +142,275 @@
         </div>
     </section>
 
-    
+    <!-- last section -->
+    <section class="last">
+
+      <div class="blogs">
+
+        <div class="box">
+         <div class="text">
+            <div class="head">
+                <img src="./images/1_sHhtYhaCe2Uc3IU0IgKwIQ.png" alt="">
+                <h4>Nga Vuong Sandoval</h4>
+            </div>
+            <h3>We're not all the same: Why Lunar New Year Matters</h3>
+            <p>Hoping and Pouncing into the new year with two furry zodiacs</p>
+            <div class="save">
+              <h4>Jan 17 . 5 min read</h4>
+              <i class="bi bi-bookmark-plus"></i>
+            </div>
+          </div>
+          <div class="image">
+            <img src="./images/1_S4_PumSAywyb2vjUVbbczA.jpeg" alt="">
+          </div>
+        </div>
+
+        <div class="box">
+          <div class="text">
+             <div class="head">
+                 <img src="./images/1_sHhtYhaCe2Uc3IU0IgKwIQ.png" alt="">
+                 <h4>Nga Vuong Sandoval</h4>
+             </div>
+             <h3>Inclusive Design for the 2023 New Year</h3>
+             <p>It’s that time of the year again. Lunar New Year. A time to forge ahead, a time</p>
+             <div class="save">
+               <h4>Jan 17 . 5 min read</h4>
+               <i class="bi bi-bookmark-plus"></i>
+             </div>
+           </div>
+           <div class="image">
+             <img src="./images/1_qshjaVzbtHBx5eI0BsH1Gw (1).png" alt="">
+           </div>
+         </div>
+
+         <div class="box">
+          <div class="text">
+             <div class="head">
+                 <img src="./images/1_sHhtYhaCe2Uc3IU0IgKwIQ.png" alt="">
+                 <h4>Nga Vuong Sandoval</h4>
+             </div>
+             <h3>We're not all the same: Why Lunar New Year Matters</h3>
+             <p>Hoping and Pouncing into the new year with two furry zodiacs</p>
+             <div class="save">
+               <h4>Jan 17 . 5 min read</h4>
+               <i class="bi bi-bookmark-plus"></i>
+             </div>
+           </div>
+           <div class="image">
+             <img src="./images/1_S4_PumSAywyb2vjUVbbczA.jpeg" alt="">
+           </div>
+         </div>
+
+         <div class="box">
+          <div class="text">
+             <div class="head">
+                 <img src="./images/1_sHhtYhaCe2Uc3IU0IgKwIQ.png" alt="">
+                 <h4>Nga Vuong Sandoval</h4>
+             </div>
+             <h3>We're not all the same: Why Lunar New Year Matters</h3>
+             <p>Hoping and Pouncing into the new year with two furry zodiacs</p>
+             <div class="save">
+               <h4>Jan 17 . 5 min read</h4>
+               <i class="bi bi-bookmark-plus"></i>
+             </div>
+           </div>
+           <div class="image">
+             <img src="./images/1_S4_PumSAywyb2vjUVbbczA.jpeg" alt="">
+           </div>
+         </div>
+
+         <div class="box">
+          <div class="text">
+             <div class="head">
+                 <img src="./images/1_sHhtYhaCe2Uc3IU0IgKwIQ.png" alt="">
+                 <h4>Nga Vuong Sandoval</h4>
+             </div>
+             <h3>We're not all the same: Why Lunar New Year Matters</h3>
+             <p>Hoping and Pouncing into the new year with two furry zodiacs</p>
+             <div class="save">
+               <h4>Jan 17 . 5 min read</h4>
+               <i class="bi bi-bookmark-plus"></i>
+             </div>
+           </div>
+           <div class="image">
+             <img src="./images/1_S4_PumSAywyb2vjUVbbczA.jpeg" alt="">
+           </div>
+         </div>
+
+         <div class="box">
+          <div class="text">
+             <div class="head">
+                 <img src="./images/1_sHhtYhaCe2Uc3IU0IgKwIQ.png" alt="">
+                 <h4>Nga Vuong Sandoval</h4>
+             </div>
+             <h3>We're not all the same: Why Lunar New Year Matters</h3>
+             <p>Hoping and Pouncing into the new year with two furry zodiacs</p>
+             <div class="save">
+               <h4>Jan 17 . 5 min read</h4>
+               <i class="bi bi-bookmark-plus"></i>
+             </div>
+           </div>
+           <div class="image">
+             <img src="./images/1_S4_PumSAywyb2vjUVbbczA.jpeg" alt="">
+           </div>
+         </div>
+
+         <div class="box">
+          <div class="text">
+             <div class="head">
+                 <img src="./images/1_sHhtYhaCe2Uc3IU0IgKwIQ.png" alt="">
+                 <h4>Nga Vuong Sandoval</h4>
+             </div>
+             <h3>We're not all the same: Why Lunar New Year Matters</h3>
+             <p>Hoping and Pouncing into the new year with two furry zodiacs</p>
+             <div class="save">
+               <h4>Jan 17 . 5 min read</h4>
+               <i class="bi bi-bookmark-plus"></i>
+             </div>
+           </div>
+           <div class="image">
+             <img src="./images/1_S4_PumSAywyb2vjUVbbczA.jpeg" alt="">
+           </div>
+         </div>
+
+         <div class="box">
+          <div class="text">
+             <div class="head">
+                 <img src="./images/1_sHhtYhaCe2Uc3IU0IgKwIQ.png" alt="">
+                 <h4>Nga Vuong Sandoval</h4>
+             </div>
+             <h3>We're not all the same: Why Lunar New Year Matters</h3>
+             <p>Hoping and Pouncing into the new year with two furry zodiacs</p>
+             <div class="save">
+               <h4>Jan 17 . 5 min read</h4>
+               <i class="bi bi-bookmark-plus"></i>
+             </div>
+           </div>
+           <div class="image">
+             <img src="./images/1_S4_PumSAywyb2vjUVbbczA.jpeg" alt="">
+           </div>
+         </div>
+
+         <div class="box">
+          <div class="text">
+             <div class="head">
+                 <img src="./images/1_sHhtYhaCe2Uc3IU0IgKwIQ.png" alt="">
+                 <h4>Nga Vuong Sandoval</h4>
+             </div>
+             <h3>We're not all the same: Why Lunar New Year Matters</h3>
+             <p>Hoping and Pouncing into the new year with two furry zodiacs</p>
+             <div class="save">
+               <h4>Jan 17 . 5 min read</h4>
+               <i class="bi bi-bookmark-plus"></i>
+             </div>
+           </div>
+           <div class="image">
+             <img src="./images/1_S4_PumSAywyb2vjUVbbczA.jpeg" alt="">
+           </div>
+         </div>
+
+         <div class="box">
+          <div class="text">
+             <div class="head">
+                 <img src="./images/1_sHhtYhaCe2Uc3IU0IgKwIQ.png" alt="">
+                 <h4>Nga Vuong Sandoval</h4>
+             </div>
+             <h3>We're not all the same: Why Lunar New Year Matters</h3>
+             <p>Hoping and Pouncing into the new year with two furry zodiacs</p>
+             <div class="save">
+               <h4>Jan 17 . 5 min read</h4>
+               <i class="bi bi-bookmark-plus"></i>
+             </div>
+           </div>
+           <div class="image">
+             <img src="./images/1_S4_PumSAywyb2vjUVbbczA.jpeg" alt="">
+           </div>
+         </div>
+
+         <div class="box">
+          <div class="text">
+             <div class="head">
+                 <img src="./images/1_sHhtYhaCe2Uc3IU0IgKwIQ.png" alt="">
+                 <h4>Nga Vuong Sandoval</h4>
+             </div>
+             <h3>We're not all the same: Why Lunar New Year Matters</h3>
+             <p>Hoping and Pouncing into the new year with two furry zodiacs</p>
+             <div class="save">
+               <h4>Jan 17 . 5 min read</h4>
+               <i class="bi bi-bookmark-plus"></i>
+             </div>
+           </div>
+           <div class="image">
+             <img src="./images/1_S4_PumSAywyb2vjUVbbczA.jpeg" alt="">
+           </div>
+         </div>
+
+         <div class="box">
+          <div class="text">
+             <div class="head">
+                 <img src="./images/1_sHhtYhaCe2Uc3IU0IgKwIQ.png" alt="">
+                 <h4>Nga Vuong Sandoval</h4>
+             </div>
+             <h3>We're not all the same: Why Lunar New Year Matters</h3>
+             <p>Hoping and Pouncing into the new year with two furry zodiacs</p>
+             <div class="save">
+               <h4>Jan 17 . 5 min read</h4>
+               <i class="bi bi-bookmark-plus"></i>
+             </div>
+           </div>
+           <div class="image">
+             <img src="./images/1_S4_PumSAywyb2vjUVbbczA.jpeg" alt="">
+           </div>
+         </div>
+
+         <div class="box">
+          <div class="text">
+             <div class="head">
+                 <img src="./images/1_sHhtYhaCe2Uc3IU0IgKwIQ.png" alt="">
+                 <h4>Nga Vuong Sandoval</h4>
+             </div>
+             <h3>We're not all the same: Why Lunar New Year Matters</h3>
+             <p>Hoping and Pouncing into the new year with two furry zodiacs</p>
+             <div class="save">
+               <h4>Jan 17 . 5 min read</h4>
+               <i class="bi bi-bookmark-plus"></i>
+             </div>
+           </div>
+           <div class="image">
+             <img src="./images/1_S4_PumSAywyb2vjUVbbczA.jpeg" alt="">
+           </div>
+         </div>
+
+      </div>
+
+      <div class="links">
+        <h3>Discover more of what matters to you</h3>
+
+        <div class="btns">
+          <button>Programming</button>
+          <button>Data Science</button>
+          <button>Technology</button>
+          <button>Self Improvement</button>
+          <button>Writing</button>
+          <button>Relationships</button>
+          <button>Machine Learning</button>
+          <button>Productivity</button>
+          <button>Politics</button>
+        </div>
+
+        <ul class="secondary-links">
+          <li>Help</li>
+          <li>Status</li>
+          <li>Writers</li>
+          <li>Blog</li>
+          <li>Careers</li>
+          <li>Privacy</li>
+          <li>Terms</li>
+          <li>About</li>
+          <li>Text to Speech</li>
+        </ul>
+
+      </div>
+    </section>
 </body>
 </html>
